# Zama-challenge

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
libs/crypto/: Cargo.toml
libs/crypto/src/: lib.rs
libs/merkle-tree/: Cargo.toml
libs/merkle-tree/src/: lib.rs
server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: main.rs
test-client-folder/: file_2.txt
