[workspace]
members = [
    "libs/merkle-tree",
    "client",
    "server"
, "libs/crypto"]
resolver = "2"

[workspace.dependencies]
# local dependencies
merkle-tree = { path = "libs/merkle-tree" }
crypto = { path = "libs/crypto" }

# external dependencies
sp-crypto-hashing = "0.1.0"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.13.0"
sodiumoxide = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
