[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# local dependencies
merkle-tree.workspace = true
crypto.workspace = true

# external dependencies
clap.workspace = true
sp-crypto-hashing.workspace = true
itertools.workspace = true
sodiumoxide.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5.0.1"
hkdf = "0.13.0-pre.4"
sha2 = "0.10.8"
hex = "0.4.3"
bincode = "2.0.0-rc.3"
