[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26"
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "1.0"
hex = "0.4"
merkle-tree.workspace = true
sha2 = "0.10.8" # Assume you have your own or another crate
sp-crypto-hashing = "0.1.0"
