[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
sodiumoxide.workspace = true
serde.workspace = true
serde_json.workspace = true
hkdf = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
ssh-key = "0.6.7"
ssh-keys = "0.1.4"
ed25519-dalek = "2.1.1"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.3"